--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <com.wsg.widget.bar.TitleBar
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:canFinish="true"
+        app:title="登录系统" />
 
 
     <TextView
@@ -24,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="输入员工编号"
+            android:inputType="number"
             android:padding="10dp" />
     </android.support.design.widget.TextInputLayout>
 
@@ -37,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="输入设备编号"
+            android:inputType="number"
             android:padding="10dp" />
     </android.support.design.widget.TextInputLayout>
 
