--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
         <item name="qusnap_switch_camera_icon">@drawable/aliyun_svideo_snap_switch_camera</item>
         <item name="qusnap_switch_camera_icon_visibility">visible</item>
         <item name="qusnap_beauty_icon">@drawable/aliyun_svideo_snap_switch_beauty</item>
-        <item name="qusnap_beauty_icon_visibility">visible</item>
+        <item name="qusnap_beauty_icon_visibility">gone</item>
         <item name="qusnap_record_icon">@drawable/aliyun_svideo_snap_record_state_selector</item>
         <item name="qusnap_delete_icon">@drawable/aliyun_svideo_snap_icon_delete</item>
         <item name="qusnap_complete_icon">@drawable/aliyun_svideo_snap_icon_complete</item>
