--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <cn.jzvd.JzvdStd
+    <com.wsg.factoryoverhaul.view.JzvdStdSpeed
         android:id="@+id/videoplayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
