--- a/app/src/main/res/layout/jiaozi_player_video.xml
+++ b/app/src/main/res/layout/jiaozi_player_video.xml
@@ -5,6 +5,7 @@
     android:background="@android:color/black"
     android:descendantFocusability="blocksDescendants">
 
+
     <FrameLayout
         android:id="@+id/surface_container"
         android:layout_width="match_parent"
@@ -16,12 +17,11 @@
         android:id="@+id/thumb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:background="#000000"
         android:scaleType="fitCenter" />
-
     <LinearLayout
         android:id="@+id/layout_bottom"
         android:layout_width="match_parent"
@@ -50,10 +50,10 @@
             android:max="100"
             android:maxHeight="1dp"
             android:minHeight="1dp"
-            android:paddingLeft="12dp"
-            android:paddingTop="8dp"
-            android:paddingRight="12dp"
             android:paddingBottom="8dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingTop="8dp"
             android:progressDrawable="@drawable/jz_bottom_seek_progress"
             android:thumb="@drawable/jz_bottom_seek_thumb" />
 
@@ -64,15 +64,6 @@
             android:text="00:00"
             android:textColor="#ffffff" />
 
-        <TextView
-            android:id="@+id/clarity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:paddingLeft="20dp"
-            android:text="clarity"
-            android:textAlignment="center"
-            android:textColor="#ffffff" />
 
         <ImageView
             android:id="@+id/fullscreen"
@@ -106,8 +97,8 @@
         android:id="@+id/layout_top"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/jz_title_bg"
         android:gravity="center_vertical">
@@ -116,21 +107,23 @@
             android:id="@+id/back"
             android:layout_width="23dp"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:paddingStart="12dp"
             android:paddingLeft="12dp"
+            android:paddingStart="12dp"
             android:scaleType="centerInside"
             android:src="@drawable/jz_click_back_selector" />
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="257dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginStart="12dp"
             android:layout_toEndOf="@+id/back"
             android:layout_toRightOf="@+id/back"
             android:ellipsize="end"
@@ -139,47 +132,79 @@
             android:textSize="18sp" />
 
         <LinearLayout
-            android:id="@+id/battery_time_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="14dp"
-            android:layout_marginRight="14dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/battery_level"
-                android:layout_width="23dp"
-                android:layout_height="10dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/jz_battery_level_10" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"/>
 
             <TextView
-                android:id="@+id/video_current_time"
+                android:id="@+id/video_download"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="#ffffff"
+                android:text="下载"
+                android:visibility="gone"
+                android:padding="10dp"
+                android:textSize="14sp"/>
+            <TextView
+                android:id="@+id/clarity"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:gravity="center"
+                android:text=""
+                android:visibility="invisible"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:textAlignment="center"
+                android:textColor="#ffffff" />
+
+            <TextView
+                android:id="@+id/video_speed"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="#ffffff"
+                android:text="1X"
+                android:visibility="invisible"
+                android:paddingLeft="10dp"
+                android:paddingRight="20dp"
+                android:textSize="14sp"/>
+            <LinearLayout
+                android:id="@+id/battery_time_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="14dp"
+                android:layout_marginRight="14dp"
                 android:gravity="center_vertical"
-                android:maxLines="1"
-                android:textColor="#ffffffff"
-                android:textSize="12.0sp" />
-        </LinearLayout>
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_speed"
-            android:layout_width="42dp"
-            android:layout_height="60dp"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
-            android:layout_toStartOf="@+id/battery_time_layout"
-            android:layout_toLeftOf="@+id/battery_time_layout"
-            android:gravity="center"
-            android:text="倍速"
-            android:textColor="#ffffffff" />
+                <ImageView
+                    android:id="@+id/battery_level"
+                    android:layout_width="23dp"
+                    android:layout_height="10dp"
+                    android:visibility="invisible"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/jz_battery_level_10" />
+
+                <TextView
+                    android:id="@+id/video_current_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:visibility="invisible"
+                    android:textColor="#ffffffff"
+                    android:textSize="12.0sp" />
+
+            </LinearLayout>
+        </LinearLayout>
     </RelativeLayout>
 
     <ProgressBar
@@ -201,6 +226,7 @@
 
         <ImageView
             android:id="@+id/start"
+            android:visibility="invisible"
             android:layout_width="@dimen/jz_start_button_w_h_normal"
             android:layout_height="@dimen/jz_start_button_w_h_normal"
             android:src="@drawable/jz_click_play_selector" />
@@ -231,7 +257,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/video_loading_failed"
+            android:text="视频加载失败"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
@@ -241,12 +267,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:background="@drawable/retry_bg"
-            android:paddingLeft="9dp"
-            android:paddingTop="4dp"
-            android:paddingRight="9dp"
             android:paddingBottom="4dp"
-            android:text="@string/click_to_restart"
+            android:paddingLeft="9dp"
+            android:paddingRight="9dp"
+            android:paddingTop="4dp"
+            android:text="点击重试"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
     </LinearLayout>
+
+
 </RelativeLayout>
